k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyro-api
  namespace: default
  labels:
    app: pyro-api
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pyro-api
  template:
    metadata:
      labels:
        app: pyro-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault

      imagePullSecrets:
        - name: ghcr-creds

      containers:
        - name: pyro-api
          image: ghcr.io/ylanov/pyro-api:2.0.632
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

          volumeMounts:
            - name: uploads-storage
              mountPath: /uploads

          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "512Mi"

      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: pyro-uploads-pvc

      restartPolicy: Always
