k8s/ingress-anyhost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyro-anyhost
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyro-frontend
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pyro-api
                port:
                  number: 80
