k8s/netpol-allow-minio-from-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-minio-from-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: pyro-db
      ports:
        - protocol: TCP
          port: 9000
