k8s/netpol-allow-pyro-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-pyro-api
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pyro-api
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          # Внутри pod'а контейнер слушает 8000 (Service уже мапит 80 -> 8000),
          # поэтому здесь именно 8000.
          port: 8000
      # FROM не указываем => разрешаем с любого источника.
      # Это безопасно в рамках кластера, а наружу вас всё равно
      # пускает только через Ingress/Service.
